# franka_pendulum

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  controller.py  franka_pole.launch  franka_pole.xacro  franka_pole_cartesian_controller.cpp  franka_pole_cartesian_controller.h  franka_pole_controller.cpp  franka_pole_controller.h  franka_pole_controller.yaml  franka_pole_controller_plugin.xml  franka_pole_controllers.yaml  franka_pole_controllers_plugin.xml  package.xml  plotter.py  pole_sim.yaml
config/: franka_pendulum_controllers.yaml  franka_pendulum_controllers_plugin.xml  franka_pendulum_sim.yaml  franka_pole_controllers.yaml  franka_pole_controllers_plugin.xml  franka_pole_sim.yaml  parameters.yaml  parameters_1D_acceleration.yaml  rosdoc.yaml
config/override/: 0D.yaml  1D.yaml  2D.yaml  acceleration+0D.yaml  acceleration+1D.yaml  acceleration+2D.yaml  acceleration+2Db.yaml  acceleration+2Dc.yaml  robot.yaml  test+1D.yaml  test+2D.yaml  test+acceleration+2D.yaml  test+acceleration+2Db.yaml  test+gazebo.yaml
example/: .gitignore  CMakeLists.txt  package.xml
example/config/: franka_pendulum_example_controllers.yaml  franka_pendulum_example_controllers_plugin.xml  franka_pole_example_controllers.yaml  franka_pole_example_controllers_plugin.xml
example/launch/: franka_pendulum_example.launch  franka_pole_example.launch
example/src/: hybrid_controller.cpp
include/franka_pendulum/: acceleration_controller.h  controller.h  external_acceleration_controller.h  external_position_controller.h  franka_model.h  franka_state.h  model.h  parameter_reader.h  parameters.h  pendulum_state.h  position_controller.h  pseudo_inverse.h  publisher.h  simple_acceleration_controller.h  simple_position_controller.h  test_acceleration_controller.h  test_position_controller.h
include/franka_pole/: acceleration_controller.h  controller.h  external_acceleration_controller.h  external_position_controller.h  franka_model.h  franka_state.h  integrated_acceleration_controller.h  integrated_position_controller.h  integrated_test_acceleration_controller.h  integrated_test_position_controller.h  model.h  parameter_reader.h  parameters.h  pole_state.h  position_controller.h  pseudo_inverse.h  publisher.h  simple_acceleration_controller.h  simple_position_controller.h  test_acceleration_controller.h  test_position_controller.h
launch/: franka_pendulum.launch  franka_pole.launch
meshes/: 1D.FCStd  2D.FCStd  2Db.FCStd  2Dc.FCStd  part1.FCStd  part10.FCStd  part11.FCStd  part12.FCStd  part13.FCStd  part14.FCStd  part15.FCStd  part16.FCStd  part17.FCStd  part18.FCStd  part2.FCStd  part3.FCStd  part4.FCStd  part5.FCStd  part6.FCStd  part7.FCStd  part8.FCStd  part9.FCStd
meshes/visual/: 1D_lower.dae  1D_upper.dae  2D_lower.dae  2D_middle.dae  2D_upper.dae  2Db_lower.dae  2Db_upper.dae  2Dc_lower.dae  lower_bearing.dae  upper_bearing.dae
msg/: CommandAcceleration.msg  CommandParameters.msg  CommandPosition.msg  CommandReset.msg  DebugSample.msg  Sample.msg
robots/: franka_pendulum.xacro  franka_pendulum_1D.xacro  franka_pendulum_2D.xacro  franka_pendulum_2Db.xacro  franka_pendulum_2Dc.xacro  franka_pole.xacro  franka_pole_1D.xacro  franka_pole_2D.xacro  franka_pole_2Db.xacro  franka_pole_2Dc.xacro  panda_gazebo.xacro
scripts/: acceleration_controller.py  calibrate.py  logger.py  lqr.py  optimize.py  parts.py  plotter.py  position_controller.py  reconfigure.py  resetter.py  run.sh  run_parallel.sh  rviz.sh
src/: acceleration_controller.cpp  controller.cpp  external_acceleration_controller.cpp  external_position_controller.cpp  franka_model.cpp  franka_state.cpp  integrated_acceleration_controller.cpp  integrated_position_controller.cpp  integrated_test_acceleration_controller.cpp  integrated_test_position_controller.cpp  model.cpp  parameter_reader.cpp  parameters.cpp  pendulum_state.cpp  plugin.cpp  pole_state.cpp  position_controller.cpp  publisher.cpp  simple_acceleration_controller.cpp  simple_position_controller.cpp  test_acceleration_controller.cpp  test_position_controller.cpp
visual/: 1D.FCStd
