<?xml version="1.0"?>
<package format="2">
  <name>franka_pendulum</name>
  <version>0.0.0</version>
  <description>The franka_pendulum package</description>

  <author email="kyrylo.sovailo@rwth-aachen.de">Kyrylo Sovailo</author>
  <maintainer email="kyrylo.sovailo@rwth-aachen.de">Kyrylo Sovailo</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Data-Science-in-Mechanical-Engineering/franka_pendulum</url>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>controller_interface</depend>
  <depend>franka_description</depend>
  <depend>franka_gazebo</depend>

  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <controller_interface plugin="${prefix}/config/franka_pendulum_controllers_plugin.xml"/>
    <rosdoc config="${prefix}/config/rosdoc.yaml" />
  </export>
</package>
