<?xml version="1.0"?>
<package format="2">
  <name>franka_pendulum_example</name>
  <version>0.0.0</version>
  <description>The franka_pendulum example project</description>

  <author email="kyrylo.sovailo@rwth-aachen.de">Kyrylo Sovailo</author>
  <maintainer email="kyrylo.sovailo@rwth-aachen.de">Kyrylo Sovailo</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Data-Science-in-Mechanical-Engineering/franka_pendulum</url>
  
  <depend>franka_pendulum</depend>
  <depend>controller_interface</depend>
  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <controller_interface plugin="${prefix}/config/franka_pendulum_example_controllers_plugin.xml"/>
  </export>
</package>
